--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -55,6 +55,11 @@
             <a class="titulo-datanasc">Data de Nascimento</a>
             <br>
             <input class="datanasc" id="bData" type="date"/>
+            <br>
+            <input class="nome" type="text" placeholder="Cidade"/>
+             <input class="sobrenome" type="text" placeholder="Estado"/>
+             <br><br>
+             <input type="tel" maxlength="11" placeholder="Telefone" class="input"/>
             <br><br><br>
             <a href="./index-login.html"><button class="btn-cad" id="bCad">Cadastre-se</button></a>
           </div>
