pagina de cadatro de funcionario

--- a/paginas/index-login.html
+++ b/paginas/index-login.html
@@ -10,7 +10,7 @@
               <a class="menu" href="#">HOME</a>
               <a class="menu">PRODUTOS</a>
               <a class="menu">CARRINHO</a>
-              <a class="menu">PERFIL</a>
+              <a class="menu">SAIR</a>
               
               <!--<input type="text" id="buscar" placeholder="Buscar"> <button id="botao_buscar" type="submit"><img src="./img/search.png" height="23px"></button> -->
             </div>
